--- a/benchmark/configs/reddit/reddit.yml
+++ b/benchmark/configs/reddit/reddit.yml
@@ -2,23 +2,13 @@
 
 # ========== Cluster configuration ========== 
 # ip address of the parameter server (need 1 GPU process)
-ps_ip: 10.0.0.2
+ps_ip: localhost # 10.0.0.2
 
 # ip address of each worker:# of available gpus process on each gpu in this node
 # Note that if we collocate ps and worker on same GPU, then we need to decrease this number of available processes on that GPU by 1
 # E.g., master node has 4 available processes, then 1 for the ps, and worker should be set to: worker:3
 worker_ips: 
-    - 10.0.0.3:[5] # worker_ip: [(# processes on gpu) for gpu in available_gpus]
-    - 10.0.0.4:[5]
-    - 10.0.0.5:[5]
-    - 10.0.0.6:[5]
-    - 10.0.0.7:[5]
-    - 10.0.0.8:[5]
-    - 10.0.0.9:[4]
-    - 10.0.0.10:[4]
-    - 10.0.0.11:[4]
-    - 10.0.0.12:[4]
-    - 10.0.0.13:[4]
+    - localhost:[5] # worker_ip: [(# processes on gpu) for gpu in available_gpus]
 
 exp_path: $FEDSCALE_HOME/fedscale/cloud
 
